<resources>
    <string name="app_name">Myntra</string>

    <string name="navigation_drawer_open">Open side navigation</string>
    <string name="navigation_drawer_close">Close side navigation</string>

    <string name="zeta_header_title">Manjunath</string>
    <string name="zeta_header_subtitle">manjunath.c83@gmail.com</string>

    <string name="zeta_navigation_home">Home</string>
    <string name="zeta_navigation_accounts">Accounts</string>
    <string name="zeta_navigation_my_orders">My Orders</string>

    <string name="zeta_navigation_sub_menu_title">Submenu</string>
    <string name="zeta_navigation_sub_menu_refer">Refer &amp; Earn</string>
    <string name="zeta_navigation_sub_menu_settings">Settings</string>
    <string name="zeta_navigation_sub_menu_developer">Developer Settings</string>

</resources>
